data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_62.wast
;; 3. **Test with Multiple Mixed Targets Including Out-of-Bound**:    - A `block` containing a `br_table` instruction with a mix of valid and out-of-bound target indices.    - This tests if `br_table` handles multiple entries properly and switches context correctly when encountering an invalid index.    - Edge Case: Incorrect reset or initialization behavior in wizard_engine might lead to incorrect handling of mixed validity indices.

(assert_invalid
  (module (func $test-mixed-targets
    (block $label (br_table 0 1 2 (i32.const 0)))
    (block $label (br_table 0 -1 1 (i32.const 1)))
  ))
  "invalid label index"
)